<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.asuswork.jamor.facturasapp.Activities.MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|top"
        android:layout_weight="0.4">

        <android.support.design.widget.FloatingActionButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            app:layout_anchorGravity="top|right"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            android:layout_gravity="top|right"
            app:srcCompat="@android:drawable/ic_menu_manage"
            android:id="@+id/user_settings_btn" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.6">

        <Button
            android:id="@+id/novoElementoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/novo_produto"/>

        <Button
            android:id="@+id/novaFacturaBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nova_factura"/>

        <Button
            android:id="@+id/editarElementoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar_produto"/>

        <Button
            android:id="@+id/editarFacturaBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editar_factura"/>

        <Button
            android:id="@+id/apagarElementoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:text="@string/apagar_produto"/>
        <Button
            android:id="@+id/apagarFacturaBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:text="@string/apagar_factura"/>

        <Button
            android:id="@+id/listarElementosBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listar_produtos"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/listarFacturasBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:text="@string/listar_facturas"/>

    </LinearLayout>


</LinearLayout>
