<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_user_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.asuswork.jamor.facturasapp.Activities.UserSettingsActivity"
    android:gravity="center"
    android:orientation="vertical">

    <Switch
        android:id="@+id/user_public_switch"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/user_is_public_str"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/change_username_btn"
        android:layout_marginTop="20dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_change_username"/>

    <Button
        android:id="@+id/change_password_btn"
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_change_password"/>

    <Button
        android:id="@+id/goBack_settings_btn"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:text="@string/settings_goBack"/>

</LinearLayout>
