<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.asuswork.jamor.facturasapp.Activities.NovoProdutoActivity"
    tools:showIn="@layout/activity_novo_produto" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/novoProduto_designacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_designacao"
                android:imeActionId="@+id/novaFactura"
                android:imeActionLabel="@string/label_designacao"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:hint="@string/label_valor"
                android:imeActionId="@+id/novaFactura"
                android:imeActionLabel="@string/label_valor"
                android:id="@+id/novoProduto_valor"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/novoProduto_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/novoProduto_facturas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/novoProduto_comentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_comentario"
                android:imeActionId="@+id/novaFactura"
                android:imeActionLabel="@string/label_comentario"
                android:imeOptions="actionUnspecified"
                android:inputType="textMultiLine"
                android:lines="5"
                android:gravity="top"
                android:maxLines="5"/>

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
